--- a/src/VList/VList.css
+++ b/src/VList/VList.css
@@ -1,8 +1,7 @@
 .VList-wrapper {
   --columns: 3; /* or pass from jsx */
   border: 4px solid black;
-  overflow-x: hidden;
-  position: relative;
+  min-width: 475px;
 }
 
 .VList-wrapper table {
@@ -17,17 +16,14 @@
   height: 100%;
   padding: var(--cell-padding);
   text-align: center;
-  vertical-align: middle;
   border: 0 solid black;
-
-  /*min-width: 140px;*/
 }
 
 .VList-wrapper th {
   height: var(--row-height);
   border-width: 2px;
-  border-left-width: 3px;
-  border-right-width: 3px;
+  border-left-width: 2px;
+  border-right-width: 2px;
 }
 .VList-wrapper td {
   border-width: 1px;
@@ -35,15 +31,20 @@
 
 .VList-wrapper .VList-table {
   display: block;
-  overflow-x: hidden;
   overflow-y: scroll;
   height: var(--table-height);
+
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+.VList-wrapper .VList-table::-webkit-scrollbar {
+  display: none;
 }
 
 .VList-wrapper .VList-table > tbody {
   position: relative;
   display: table;
-  width: calc(100% + 5px * var(--columns));
+  width: calc(100% - 1px); /* account for right border */
   height: var(--tbody-height);
 }
 .VList-wrapper .VList-table > tbody > tr {
